
Changes and New Features in 2.2 (2024-08-28):
        * ensure that the number of columns within x.train and x.test match

Changes and New Features in 2.1 (2023-11-27):
        * tsvs/tsvs2 now plot VIMP prob. rather than inclusion prob.  

	* add bmx data set example

	* calculate Restricted Mean Surival Time (RMST) via the new
	argument RMST.max

	* no longer sampling from the posterior predictive for z

Changes and New Features in 1.7-2.0 (2023-11-01): 
	* skipping due to pre-test issues

Changes and New Features in 1.6 (2023-04-29):
        * C++14 is required for this package

	* hard-wiring Windows Makevars for OpenMP

	* auto-detection of OpenMP on macOS and Linux

	* sampling from the posterior predictive for z

	* resolve many C++ compiler warnings

Changes and New Features in 1.5 (2023-01-06):
        * streamlining the interface to nft2/nft/tsvs2/tsvs

	* for code maintainability, nft is just a wrapper of nft2
	  (and predict.nft is just a wrapper of predict.nft2)

	* for non-FPD scenarios, calculate lower/upper just like FPD

	* harden bMM for P=1 

Changes and New Features in 1.4 (2022-08-25):
	* New option: mask unstable sd(.) estimates to calculate soffset

	* Use hardened DPM LIO variance prior setting

	* Return both the LPML and the CPO

	* add bMM (a la bartModelMatrix) to compute dummies/etc.

        * predict produces draws from the predictive distribution of log t
	  to facilitate C index calculations

	* predict.aftree provided for producing survival/pdf/hazard
	  function estimates (or their Friedman's partial dependence 
          estimates if requested) for AFT BART like predict.nft does 
	  for NFT BART
          also draws from the predictive distribution of log t (as above)
	
	* experimental support for differing X matrices for f and sd
	  see nft2 function

	* Thompson Sampling Variable Selection functions
	  tsvs for the same X matrix and tsvs2 for two different matrices
