@@ -1,6 +1,15 @@
 
-Changes and New Features in 2.2 (2024-08-28):
+Changes and New Features in 2.2 (2024-09-05):
         * ensure that the number of columns within x.train and x.test match
+
+	* nft2: better recognition of whether xftrain/xstrain 
+	(and xftest/xstest) differ
+
+	* for covariates that have substantial missingness, 
+	we may need a missing value indicator for proper inference
+	however, that required cold-decking before calculating correlation
+
+	* on a related note: adding mi.nft2/mi.nft for multiple imputation
 
 Changes and New Features in 2.1 (2023-11-27):
         * tsvs/tsvs2 now plot VIMP prob. rather than inclusion prob.  
